Fix issue with whitespace around content
Had a small whitespace around the content. added margin 0 to body to fix that.

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,10 @@ html {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-
+body {
+    padding: 0;
+    margin: 0;
+}
 
 .upper-content {
     padding: 0 10%;
